fixes css-based ART record bar/audio bar UI toggle jumping

--- a/client/styles/_player/components/_components.answers.scss
+++ b/client/styles/_player/components/_components.answers.scss
@@ -168,9 +168,9 @@
 }
 
 .c-record {
-  padding: 2rem 3rem 1rem;
   @include display-flex;
   @include align-items(center);
+  height: 4.375rem;
 }
 
 .c-audio-holder {
@@ -181,13 +181,20 @@
     audio{
       width: 100%;
     }
+
+    .c-audio-bar {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
 }
 
 .c-audio-timer {
-  padding: .08rem 1.14rem .1rem 0;
   color: #5a5a5a;
   @include light;
   font-size: 2.2rem;
+  line-height: 1.3;
 
   small {
     @include regular;
